--- a/configuration.properties
+++ b/configuration.properties
@@ -1,3 +1,32 @@
 amazon_url=http://www.amazon.com
 browser=chrome
 yandex_url=http://www.yandex.com
+facebook_url=http://www.facebook.com
+kr_url=https://qa-environment.koalaresorthotels.com/
+kr_valid_username=manager
+kr_valid_password=Manager1!
+kr_basarili_giris_url= https://qa-environment.koalaresorthotels.com/Admin/UserAdmin
+
+kr_gecersiz_username=Manager1
+kr_gecersiz_password=Manager1
+
+kr_gecersiz_username5= Manager5
+kr_gecersiz_password5=Manager5!
+kr_gecersiz_username6=Manager6
+kr_gecersiz_password6=Manager6!
+kr_gecersiz_username7=Manager7
+kr_gecersiz_password7=Manager7!
+kr_gecersiz_username8=Manager8
+kr_gecersiz_password8=Manager8!
+kr_gecersiz_username9=Manager9
+kr_gecersiz_password9=Manager9!
+
+editor_datatables_url=https://editor.datatables.net/
+firts_name=Islam
+last_name=Dogan
+position=full stack automation engineer
+office=ADB
+start_date=2020-01-26
+salary=3000
+extension=Amsterdam
+sonuc_url=https://editor.datatables.net/q/?q=Islam
