--- a/configuration.properties
+++ b/configuration.properties
@@ -30,3 +30,23 @@ start_date=2020-01-26
 salary=3000
 extension=Amsterdam
 sonuc_url=https://editor.datatables.net/q/?q=Islam
+Demo_SatirNo=3
+Demo_SutunNo=4
+Demo_Guru_Url=http://demo.guru99.com/test/web-table-element.php
+Manager=Manager
+Manager2=Manager2
+Manager3=Manager3
+Manager4=Manager4
+Manager5=Manager5
+
+Automation_Praxtice=http://automationpractice.com/index.php
+email=selamMillett@gmail.com
+password=12345
+adress=kres straat 45
+postCode=22044
+yorum=Basarilarinizin devamini diliyorum...
+telephoneNummer=0555444332
+gecersizEmail=selamMillet.gmail.com
+
+guru_url=http://demo.guru99.com/test/web-table-element.php
+bankIsmi=DCB Bank
